# rune-foundry-ai

.github/workflows/: build_deploy_apis.yml  configure_agents.yml  create_indexes.yml  create_infra.yml  deploy-mcp-servers.yml  load_datas.yml
dataset/: lore.json
index/: indexes.json
infra/: main.bicep  project_connections.bicep  project_connections.bicepparam
infra/modules/: cosmosdb.bicep  foundry.bicep  function.bicep  rbac.bicep  storage.bicep  webapp.bicep
src/: pyproject.toml
src/MCP/Crime/: Crime.csproj  GetCrime.cs  Program.cs  global.cs  host.json
src/MCP/Crime/Models/: Crime.cs
src/MCP/Crime/Repositories/: CrimeRepository.cs  ICrimeRepository.cs
src/lore_agent/: README.md  bootstrapper.py  config.py  dependencies.py  main.py  pyproject.toml
src/lore_agent/contract/: __init__.py  chat_request.py
src/lore_agent/routes/: __init__.py  chat.py
src/lore_agent/services/: __init__.py  lore_agent_service.py
utility/agentConfiguration/: main.py
utility/agentConfiguration/agents/MageGuild/: agent.py  instruction.txt  openapi.json
utility/agentConfiguration/base/: agent_configuration.py
utility/database/: main.py
utility/indexer/: main.py
utility/knowledgeBase/: main.py  pyproject.toml
utility/loader/: main.py  pyproject.toml
