[project]
name = "pythonfastapitemplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework-core>=1.0.0b260116",
    "cookiecutter>=2.6.0",
    "fastapi>=0.128.0",
    "fastapi-cli>=0.0.20",
    "python-dotenv>=1.2.1",
]
